apps/openwebui/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openwebui
  namespace: openwebui
spec:
  type: ExternalName
  externalName: placeholder
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
